# PropertyEditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/rpe/: rpe.h
include/rpe/core/: AccessGuard.h  EditorHints.h  PropertyNode.h  RttrBridge.h  RttrVariantWrapper.h  TypeBridge.h  TypeRenderer.h  rttr_prelude.h
include/rpe/ecs/: ComponentListWidget.h  EcsMirror.h  EntityComponentBrowser.h  EntityListWidget.h  MirrorChannel.h  flecs_prelude.h
include/rpe/gui/: EditorWidgets.h  PropertyDelegate.h  PropertyEditor.h  PropertyModel.h  VariantEditor.h
include/rttr_property_editor/: rttr_property_editor.h
include/rttr_property_editor/core/: PropertyDelegate.h  PropertyModel.h  PropertyNode.h  TypeRenderer.h
include/rttr_property_editor/ecs/: ComponentListWidget.h  EntityComponentBrowser.h  EntityListWidget.h
include/rttr_property_editor/widgets/: PropertyEditor.h
src/core/: PropertyDelegate.cpp  PropertyModel.cpp  PropertyNode.cpp  RttrBridge.cpp  RttrVariantWrapper.cpp  TypeBridge.cpp  TypeRenderer.cpp
src/ecs/: ComponentListWidget.cpp  EcsMirror.cpp  EntityComponentBrowser.cpp  EntityListWidget.cpp  MirrorChannel.cpp
src/gui/: EditorWidgets.cpp  PropertyDelegate.cpp  PropertyEditor.cpp  PropertyModel.cpp  VariantEditor.cpp
src/widgets/: PropertyEditor.cpp
test/: main.cpp  mirror_lifetime_test.cpp  mirror_runtime_attach_test.cpp  mirror_teardown_test.cpp  mirror_test.cpp
